Dark mode font color fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body {
 @media (prefers-color-scheme: dark) {
 	body {
 		background-color: rgb(25, 25, 25);
+		color: white;
 	}
 }
 
